# incoming-transmission

./: .gitignore  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  install.sh  pyproject.toml
.github/workflows/: test.yml
docs/: architecture.md
docs/diagrams/: compaction-handoff.dot  message-lifecycle.dot  permission-approval.dot  system-architecture.dot
hooks/: telegram-self-register.py
runtime/: bridge-preamble.example.txt  bridge_bind.py  bridge_resolve.py  com.telegram.bridge.plist  com.telegram.watchdog.plist  compaction.json  dir-aliases.example.json  permissions.json  poll-prompt.tmpl  poll-render.sh  spawn-preamble.example.txt  telegram-askuserquestion-hook.py  telegram-auq-mcp.json.template  telegram-auq-mcp.py  telegram-context.py  telegram-inbox.sh  telegram-permission-hook.py  telegram-router.py  telegram-send.sh  telegram-spawn.sh  telegram-watchdog.py
runtime/lifecycle/: end.example.txt  save.example.txt  start.example.txt  style.example.txt
skill/telegram-bridge/: SKILL.md
tests/: test_attach.py  test_bridge_bind.py  test_bridge_resolve.py  test_hung_tool.py  test_inbox_drain.py  test_programmatic_bind.py  test_reconcile.py  test_resolver_wrappers.py  test_router_backstop.py  test_spawn_bind.py  test_topic_ledger.py  test_window_reaper.py
